2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_line.geom
geometrics: main

/* Should fail -> p not defined */
line l7 (p, 10) p3